ndk abifilters for support with different plugins with arm64 ndk

--- a/src/android/anyline.gradle
+++ b/src/android/anyline.gradle
@@ -12,6 +12,9 @@ android {
 
   defaultConfig {
     minSdkVersion 15
+    ndk { 
+      abiFilters "armeabi-v7a", "x86" 
+    } 
   }
 
   compileOptions {
