--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,16 @@
 {
   "name": "anyline-cordova-example",
-  "version": "1.0.0",
+  "version": "3.11.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reinstall" : "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add android && cordova plugin add ../",
-    "reinstall-ios" : "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios && cordova plugin add ../"
+    "reinstall" : "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add https://github.com/apache/cordova-android && cordova plugin add ../",
+    "reinstall-ios" : "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios && cordova plugin add ../",
+    "overwrite" : "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
+    "overwrite-ios" : "rm -R ../src/ios/io && rm -R ../src/ios/res && cp -R platforms/ios/src/io ../src/android/ && cp -R platforms/ios/res ../src/ios",
+    "OandR" : "npm run overwrite && npm run reinstall",
+    "OandR-ios" : "npm run overwrite-ios && npm run reinstall-ios"
   },
   "author": "",
   "license": "ISC"
