--- a/example/package.json
+++ b/example/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "anyline-cordova-example",
-  "version": "3.13.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "reinstall" : "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add https://github.com/apache/cordova-android && cordova plugin add ../",
-    "reinstall-ios" : "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios && cordova plugin add ../",
-    "overwrite" : "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
-    "overwrite-ios" : "rm -R ../src/ios/io && rm -R ../src/ios/res && cp -R platforms/ios/src/io ../src/android/ && cp -R platforms/ios/res ../src/ios",
-    "OandR" : "npm run overwrite && npm run reinstall",
-    "OandR-ios" : "npm run overwrite-ios && npm run reinstall-ios"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "anyline-cordova-example",
+    "version": "3.13.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "reinstall": "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add https://github.com/apache/cordova-android && cordova plugin add ../",
+        "reinstall-ios": "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios && cordova plugin add ../",
+        "overwrite": "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
+        "overwrite-ios": "rm -R ../src/ios/io && rm -R ../src/ios/res && cp -R platforms/ios/src/io ../src/android/ && cp -R platforms/ios/res ../src/ios",
+        "OandR": "npm run overwrite && npm run reinstall",
+        "OandR-ios": "npm run overwrite-ios && npm run reinstall-ios"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "io-anyline-cordova": "file:///Users/daniel/Documents/Development/anyline-ocr-cordova-module"
+    },
+    "cordova": {
+        "platforms": [
+            "android",
+            "ios"
+        ],
+        "plugins": {
+            "io-anyline-cordova": {}
+        }
+    }
 }
