--- a/plugin.xml
+++ b/plugin.xml
@@ -79,11 +79,11 @@
         android:value="barcode" />
     </config-file>
     <config-file mode="merge" parent="/manifest/application" target="AndroidManifest.xml">
-      <activity  android:name="io.anyline.cordova.BarcodeActivity" android:theme="@android:style/Theme.Black.NoTitleBar"/>
-      <activity  android:name="io.anyline.cordova.MrzActivity" android:theme="@android:style/Theme.Black.NoTitleBar"/>
-      <activity  android:name="io.anyline.cordova.EnergyActivity" android:theme="@android:style/Theme.Black.NoTitleBar"/>
-      <activity  android:name="io.anyline.cordova.AnylineOcrActivity" android:theme="@android:style/Theme.Black.NoTitleBar"/>
-      <activity  android:name="io.anyline.cordova.DocumentActivity" android:theme="@android:style/Theme.Black.NoTitleBar"/>
+      <activity  android:name="io.anyline.cordova.BarcodeActivity" android:theme="@android:style/Theme.Black.NoTitleBar" android:screenOrientation="portrait"/>
+      <activity  android:name="io.anyline.cordova.MrzActivity" android:theme="@android:style/Theme.Black.NoTitleBar" android:screenOrientation="portrait"/>
+      <activity  android:name="io.anyline.cordova.EnergyActivity" android:theme="@android:style/Theme.Black.NoTitleBar" android:screenOrientation="portrait"/>
+      <activity  android:name="io.anyline.cordova.AnylineOcrActivity" android:theme="@android:style/Theme.Black.NoTitleBar" android:screenOrientation="portrait"/>
+      <activity  android:name="io.anyline.cordova.DocumentActivity" android:theme="@android:style/Theme.Black.NoTitleBar" android:screenOrientation="portrait"/>
     </config-file>
 
 <!-- add plugin source code -->
