--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "3.17.0",
+  "version": "3.18.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,16 @@
   },
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "cordova-android": "^6.3.0",
+    "io-anyline-cordova": "file:///Users/jonesBoi/Anyline/NewStuff/anyline-ocr-cordova-module"
+  },
   "cordova": {
-    "platforms": [],
-    "plugins": {}
+    "platforms": [
+      "android"
+    ],
+    "plugins": {
+      "io-anyline-cordova": {}
+    }
   }
 }
