--- a/example/package.json
+++ b/example/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "cordova-android": "^6.3.0",
+    "cordova-ios": "^4.5.3",
     "io-anyline-cordova": "file:///Users/jonesBoi/Anyline/NewStuff/anyline-ocr-cordova-module"
   },
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ],
     "plugins": {
       "io-anyline-cordova": {}
