--- a/src/ios/anyline_sdk/Anyline.framework/Info.plist
+++ b/src/ios/anyline_sdk/Anyline.framework/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ALBuildIdentifier</key>
+	<string>212413112017_3.18.0</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleIdentifier</key>
