--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
   "name": "anyline-cordova-example",
-  "version": "3.18.4",
+  "version": "3.19.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "reinstall": "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add android@latest && cordova plugin add ../",
-    "reinstall-ios": "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios@latest && cordova plugin add ../",
+    "reinstall": "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add android@latest && cordova plugin add ../..",
+    "reinstall-ios": "cordova platform remove ios && cordova plugin remove io-anyline-cordova && cordova platform add ios@latest && cordova plugin add ../..",
     "overwrite": "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
     "overwrite-ios": "rm -R ../src/ios/io && rm -R ../src/ios/res && cp -R platforms/ios/src/io ../src/android/ && cp -R platforms/ios/res ../src/ios",
     "OandR": "npm run overwrite && npm run reinstall",
@@ -15,9 +15,9 @@
   },
   "author": "Jonas Laux | Daniel Albertini",
   "license": "ISC",
-  "dependencies": {},
   "cordova": {
     "platforms": [],
     "plugins": {}
-  }
+  },
+  "dependencies": {}
 }
