--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "3.20.1",
+  "version": "3.21.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,11 @@
   "license": "ISC",
   "cordova": {
     "platforms": [],
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-device": {}
+    }
   },
-  "dependencies": {}
+  "dependencies": {
+    "cordova-plugin-device": "^2.0.1"
+  }
 }
