--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -3,7 +3,7 @@
         xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
         id="io-anyline-cordova"
-        version="3.21.0">
+        version="3.22.0">
 
     <name>AnylineSDK</name>
 
@@ -43,10 +43,14 @@
         <source-file src="src/ios/ALCordovaUIConfiguration.m"/>
         <!--License Plates-->
 
-        <!-- Anyline Framework & Resource Bundle -->
-<!--        <framework custom="true" src="src/ios/anyline_sdk/Anyline.framework"/>-->
-<!--        <resource-file src="src/ios/anyline_sdk/AnylineResources.bundle"/>-->
+        <!-- Anyline Framework & Resource Bundle locally -->
+        <!-- <framework custom="true" src="src/ios/anyline_sdk/Anyline.framework"/>-->
+        <!-- <resource-file src="src/ios/anyline_sdk/AnylineResources.bundle"/>-->
+
+        <!-- Anyline Framework & Resource Bundle CocoaPods -->
         <framework src="Anyline" type="podspec" spec="~> 3.21.0"/>
+
+
         <!-- Frameworks needed by Anyline SDK for iOS -->
         <framework src="libz.tbd"/>
         <framework src="libc++.tbd"/>
