--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,17 +1,17 @@
 repositories{
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
 }
 
 dependencies {
-  	compile 'com.google.android.gms:play-services-vision:8.4.0'
-    compile 'io.anyline:anylinesdk:3.21.0-RC1@aar'
+  	compile 'com.google.android.gms:play-services-vision:11.8.0'
+    compile 'io.anyline:anylinesdk:3.21.0@aar'
 }
 
 android {
 
   defaultConfig {
-    minSdkVersion 16
+    minSdkVersion 19
     ndk { 
       abiFilters "armeabi-v7a", "x86" 
     } 
