--- a/plugin/src/android/anyline.gradle
+++ b/plugin/src/android/anyline.gradle
@@ -1,11 +1,11 @@
 repositories{
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/maven/'}
+    maven { url 'https://anylinesdk.blob.core.windows.net/testing/'}
 }
 
 dependencies {
-  	compile 'com.google.android.gms:play-services-vision:11.8.0'
-    compile 'io.anyline:anylinesdk:3.22.0@aar'
+  	compile 'com.google.android.gms:play-services-vision:12.0.1'
+    compile 'io.anyline:anylinesdk:3.23.0-RC2@aar'
 }
 
 android {
