--- a/plugin/package.json
+++ b/plugin/package.json
@@ -15,9 +15,10 @@
     "cordova-android"
   ],
   "repository": {
-      "type": "git",
-      "url": "https://github.com/Anyline/anyline-ocr-cordova-module"
+    "type": "git",
+    "url": "https://github.com/Anyline/anyline-ocr-cordova-module"
   },
   "author": "Anyline GmbH",
-  "license": "SEE LICENSE IN LICENSE"
+  "license": "SEE LICENSE IN LICENSE",
+  "dependencies": {}
 }
